tests/ui/field_with_and_arbitrary.stderr
error: `with` and `arbitrary` are mutually exclusive on a field — `with = "mod"` already provides `arbitrary` via `mod::arbitrary`
 --> tests/ui/field_with_and_arbitrary.rs:5:3
  |
5 |   #[quickcheck(with = "m", arbitrary = "f")]
  |   ^
